--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
     <header>ALURAFLIX</header>
-    <h1>CONCLAVE</h1>
+    
+<section>
+    <div class="chamada-texto"> 
+        <h1>CONCLAVE</h1>
     <p>Após a morte do Papa, para eleger seu próximo sucessor, um cardeal se reúne com diversos sacerdotes. Porém, em meio a essa eleição ele descobre coisas que podem mudar sua visão sobre a igreja e tem que lidar com isso.</p>
+
+    </div>
+</section>
+   
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/JX9jasdi3ic?si=5UExCRvzVbgOTYbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
