--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="ALURAFLIX" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <title>AluraFlix</title>
 </head>
 
 <body>
@@ -18,7 +21,7 @@
                 lidar com isso.</p>
 
         </div>
-       
+
         <div>
        
             <iframe width="560" height="315" src="https://www.youtube.com/embed/JX9jasdi3ic?si=5UExCRvzVbgOTYbP"
