--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>ALURAFLIX</header>
 
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>CONCLAVE</h1>
             <p>Após a morte do Papa, para eleger seu próximo sucessor, um cardeal se reúne com diversos sacerdotes.
@@ -33,13 +33,27 @@
         </div>
     </section>
 
-    <section> 
+    <section class="categoria"> 
         <h2>Filmes</h2>
-        <div>
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=GFdZQ5M-6ws">
-                <img src="https://img.youtube.com/vi/GFdZQ5M-6ws/maxresdefault.jpg"
+                <img src="https://img.youtube.com/vi/GFdZQ5M-6ws/maxresdefault.jpg"/>
             </a>
-
+            <a href="https://www.youtube.com/watch?v=iwROgK94zcM">
+                <img src="https://img.youtube.com/vi/iwROgK94zcM/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=MZsYDpafGTY">
+                <img src="https://img.youtube.com/vi/MZsYDpafGTY/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=rX2hCa3ae9o">
+                <img src="https://img.youtube.com/vi/rX2hCa3ae9o/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=X3Pc9emMSxk">
+                <img src="https://img.youtube.com/vi/X3Pc9emMSxk/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=tD76OqlJRwQ">
+                <img src="https://img.youtube.com/vi/tD76OqlJRwQ/maxresdefault.jpg"/>
+            </a>
 
         </div>
     </section>
