--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <section class="categoria"> 
         <h2>Filmes</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=GFdZQ5M-6ws">
-                <img src="https://img.youtube.com/vi/GFdZQ5M-6ws/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=exmp1UECRtU&t=2s&ab_channel=StudioGhibliBrasil">
+                <img src="https://img.youtube.com/vi/exmp1UECRtU/maxresdefault.jpg"/>
             </a>
-            <a href="https://www.youtube.com/watch?v=iwROgK94zcM">
-                <img src="https://img.youtube.com/vi/iwROgK94zcM/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=2x5SejvTMeA&ab_channel=GKIDSFilms">
+                <img src="https://img.youtube.com/vi/2x5SejvTMeA/maxresdefault.jpg"/>
             </a>
             <a href="https://www.youtube.com/watch?v=MZsYDpafGTY">
                 <img src="https://img.youtube.com/vi/MZsYDpafGTY/maxresdefault.jpg"/>
@@ -48,8 +48,8 @@
             <a href="https://www.youtube.com/watch?v=rX2hCa3ae9o">
                 <img src="https://img.youtube.com/vi/rX2hCa3ae9o/maxresdefault.jpg"/>
             </a>
-            <a href="https://www.youtube.com/watch?v=X3Pc9emMSxk">
-                <img src="https://img.youtube.com/vi/X3Pc9emMSxk/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=k29MuznAe3I&ab_channel=TrailersBR">
+                <img src="https://img.youtube.com/vi/k29MuznAe3I/maxresdefault.jpg"/>
             </a>
             <a href="https://www.youtube.com/watch?v=tD76OqlJRwQ">
                 <img src="https://img.youtube.com/vi/tD76OqlJRwQ/maxresdefault.jpg"/>
