--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="chamada-texto">
             <h1>CONCLAVE</h1>
             <p>Após a morte do Papa, para eleger seu próximo sucessor, um cardeal se reúne com diversos sacerdotes.
-                Porém, em meio a essa eleição ele descobre coisas que podem mudar sua visão sobre a igreja e tem que
-                lidar com isso.</p>
+                
+                Porém, em meio a essa eleição ele descobre coisas que podem mudar sua visão sobre a igreja.</p>
 
         </div>
 
